Big UI Update - Fixed colors and positions

--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -43,11 +43,13 @@
 .textContainer h1 {
   font-size: 35px;
   margin: 0;
+  color: #615850;
 }
 
 .textContainer p {
   font-size: 25px;
   margin-top: 10px;
+  color: #615850;
 }
 
 .gaegu {
