--- a/src/components/Navbar/NavBar.module.scss
+++ b/src/components/Navbar/NavBar.module.scss
@@ -1,6 +1,6 @@
 .hamburger {
   position: absolute;
-  top: 32px;
+  top: 40px;
   right: 37px;
   width: 29px;
   height: 20px;
@@ -42,7 +42,7 @@
   height: 200px;
   margin: 0;
   list-style: none;
-  background-color: #ac8492;
+  background-color: #8189aa;
   border-bottom-left-radius: 300px;
   z-index: 9;
   display: flex;
