--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -34,7 +34,7 @@ $border-thickness: 70px;
   left: $border-thickness;
   right: $border-thickness;
   bottom: $border-thickness;
-  background-color: #f1ebeb;
+  background-color: #f5e9e9;
   border-radius: 20px;
   overflow: hidden;
   
