--- a/src/components/ScrollHint/ScrollHint.module.scss
+++ b/src/components/ScrollHint/ScrollHint.module.scss
@@ -13,7 +13,7 @@
     height: 44px;
     border: none;
     border-radius: 50%;
-    background: #ac8492;
+    background: #8189aa;
     cursor: pointer;
     animation: float 1.4s ease-in-out infinite;
     display: grid;
@@ -24,8 +24,8 @@
         width: 11px;
         height: 11px;
         border-radius: 3px;
-        border-left: 4px solid #fff;
-        border-bottom: 4px solid #fff;
+        border-left: 4px solid #f5e9e9;
+        border-bottom: 4px solid #f5e9e9;
         transform: rotate(-45deg);
     }
 }
