--- a/src/components/SocialHeaders/SocialHeaders.module.scss
+++ b/src/components/SocialHeaders/SocialHeaders.module.scss
@@ -1,11 +1,11 @@
 .iconBar {
     position: absolute;
-    top: 27px;
-    left: 32px;
+    top: 33px;
+    left: 37px;
     display: flex;
-    gap: 22px;
+    gap: 20px;
     a {
-        color: rgb(97, 88, 80);
+        color: #615850;
         transition: transform 0.2s ease, color 0.2s ease;
 
         &:hover {
