SocialHeaders.module.scss svg moved and modified

--- a/src/components/SocialHeaders/SocialHeaders.module.scss
+++ b/src/components/SocialHeaders/SocialHeaders.module.scss
@@ -1,21 +1,21 @@
 .iconBar {
-    position: absolute;
-    top: 33px;
-    left: 37px;
-    display: flex;
-    gap: 20px;
-    z-index: 1;
-    a {
-        color: #615850;
-        transition: transform 0.2s ease, color 0.2s ease;
+  position: absolute;
+  top: 33px;
+  left: 37px;
+  display: flex;
+  gap: 20px;
+  z-index: 1;
+  a {
+    color: #615850;
+    transition: transform 0.2s ease, color 0.2s ease;
 
-        &:hover {
-            transform: scale(1.15);
-        }
+    &:hover {
+      transform: scale(1.15);
     }
-}
 
-.iconBar a svg {
-    font-size: 23px;
-    stroke-width: 1.8px;
+    svg {
+      font-size: 23px;
+      stroke-width: 2px;
+    }
+  }
 }
