--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -11,48 +11,62 @@
   position: relative;
   width: 120px;
   height: 120px;
-}
 
-.iconStack img {
-  position: absolute;
-  inset: 0;
-}
+  img {
+    position: absolute;
+    inset: 0;
+    width: 120px;
+    height: 120px;
+  }
 
-.duck1 {
-  width: 120px;
-  height: 120px;
-  animation: fadeA 1.5s steps(1, end) infinite;
-}
+  .duck1 {
+    animation: fadeA 1.5s steps(1, end) infinite;
+  }
 
-.duck2 {
-  width: 120px;
-  height: 120px;
-  animation: fadeB 1.5s steps(1, end) infinite;
+  .duck2 {
+    animation: fadeB 1.5s steps(1, end) infinite;
+  }
 }
 
 @keyframes fadeA {
-  0%, 49.999% { opacity: 1; }
-  50%, 100%   { opacity: 0; }
+  0%,
+  49.999% {
+    opacity: 1;
+  }
+  50%,
+  100% {
+    opacity: 0;
+  }
 }
 
 @keyframes fadeB {
-  0%, 49.999% { opacity: 0; }
-  50%, 100%   { opacity: 1; }
+  0%,
+  49.999% {
+    opacity: 0;
+  }
+  50%,
+  100% {
+    opacity: 1;
+  }
 }
 
-.textContainer h1 {
-  font-size: 35px;
-  margin-top: 15px;
-  margin-bottom: 0;
-  font-weight: 200;
+.textContainer {
   color: #615850;
-}
 
-.textContainer p {
-  font-size: 25px;
-  margin-top: 5px;
-  font-weight: 100;
-  color: #615850;
+  h1 {
+    @extend .gaegu;
+    font-size: 35px;
+    font-weight: 200;
+    margin-top: 15px;
+    margin-bottom: 0;
+  }
+
+  p {
+    @extend .gaegu;
+    font-size: 25px;
+    font-weight: 100;
+    margin-top: 5px;
+  }
 }
 
 .gaegu {
