--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,4 +1,4 @@
-$border-thickness: 70px;
+$border-thickness: 80px;
 
 .body {
   position: relative;
@@ -28,6 +28,7 @@ $border-thickness: 70px;
   width: 100%;
 }
 
+
 .container {
   position: absolute;
   top: $border-thickness;
@@ -40,4 +41,30 @@ $border-thickness: 70px;
   
   display:flex;
   flex-direction: column;
+}
+
+@media (max-width: 600px), (max-height: 600px) {
+  .snapSection {
+    min-height: calc(100vh - 80px);
+  }
+
+  .container {
+    top: 60px;
+    left: 60px;
+    right: 60px;
+    bottom: 60px;
+  }
+}
+
+@media (max-width: 400px), (max-height: 400px) {
+  .snapSection {
+    min-height: calc(100vh - 80px);
+  }
+  
+  .container {
+    top: 40px;
+    left: 40px;
+    right: 40px;
+    bottom: 40px;
+  }
 }
