--- a/src/components/BreadCrumbs/BreadCrumbs.module.scss
+++ b/src/components/BreadCrumbs/BreadCrumbs.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  z-index: 13;
 }
 
 .item {
@@ -17,11 +18,33 @@
   height: 27px;
   transition: transform 120ms ease, opacity 120ms ease;
 
-&:hover {
-  transform: scale(1.06);
+  &:hover {
+    transform: scale(1.06);
+  }
+
+  .active {
+    transform: scale(1.1);
+  }
 }
 
-.active {
-  transform: scale(1.1);
+@media (max-width: 600px), (max-height: 600px) {
+  .crumbs {
+    gap: 10px;
+  }
+
+  .icon {
+    width: 20px;
+    height: 20px;
+  }
 }
+
+@media (max-width: 400px), (max-height: 400px) {
+  .crumbs {
+    gap: 5px;
+  }
+
+  .icon {
+    width: 15px;
+    height: 15px;
+  }
 }
