--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -3,31 +3,79 @@
   place-items: center;
   text-align: center;
   position: relative;
+  padding: 10px;
+
+  @media (max-width: 600px) {
+    padding: 5px;
+  }
 }
 
 .stack {
   position: relative;
-  width: 500px;
-  height: 500px;
+  width: 100px;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
+
+  @media (max-width: 600px) {
+    width: 300px;
+    height: 300px;
+  }
+
+  .profile {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 50%;
+    z-index: 1;
+
+    @media (max-width: 600px) {
+      width: 50px;
+      height: 50px;
+    }
+  }
+
+  .frame {
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    object-fit: contain;
+    z-index: 2;
+    pointer-events: none;
+  }
 }
 
-.profile {
-  position: absolute;
-  width: 250px;
-  height: 250px;
-  object-fit: cover;
-  border-radius: 50%;
-  z-index: 1;
+.textContainer {
+  margin-top: 10px;
+
+  h2 {
+    @extend .Fredoka;
+    font-size: 20px;
+    font-weight: 300;
+    margin-top: 40px;
+
+    @media (max-width: 600px) {
+      font-size: 16px;
+      margin-top: 40px;
+    }
+  }
+
+  p {
+    @extend .Fredoka;
+    font-size: 15px;
+    font-weight: 100;
+    line-height: 15px;
+
+    @media (max-width: 600px) {
+      font-size: 10px;
+      line-height: 10px;
+    }
+  }
 }
 
-.frame {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  z-index: 2;
-  pointer-events: none;
+.Fredoka {
+  font-family: "Fredoka", sans-serif;
+  font-style: normal;
 }
