About page slide in animation works

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -35,7 +35,7 @@ $border-thickness: 80px;
   left: $border-thickness;
   right: $border-thickness;
   bottom: $border-thickness;
-  background-color: #f9f0f0;
+  background-color: rgb(244, 243, 243);
   border-radius: 20px;
   overflow: hidden;
   
