--- a/src/components/ScrollHint/ScrollHint.module.scss
+++ b/src/components/ScrollHint/ScrollHint.module.scss
@@ -24,8 +24,8 @@
         width: 11px;
         height: 11px;
         border-radius: 3px;
-        border-left: 4px solid #f5e9e9;
-        border-bottom: 4px solid #f5e9e9;
+        border-left: 4px solid #f0f2fb;
+        border-bottom: 4px solid #f0f2fb;
         transform: rotate(-45deg);
     }
 }
