--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -35,7 +35,7 @@ $border-thickness: 80px;
   left: $border-thickness;
   right: $border-thickness;
   bottom: $border-thickness;
-  background-color: #f5f5e9;
+  background-color: #faf8f3;
   border-radius: 20px;
   overflow: hidden;
   
