--- a/src/pages/About/About.module.scss
+++ b/src/pages/About/About.module.scss
@@ -38,8 +38,8 @@
   transform: translateX(-40px);
 }
 
-.in .fromLeft,
-.in .fromRight {
+.fadeIn .fromLeft,
+.fadeIn .fromRight {
   opacity: 1;
   transform: translateX(0);
 }
