--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -28,14 +28,13 @@ $border-thickness: 80px;
   width: 100%;
 }
 
-
 .container {
   position: absolute;
   top: $border-thickness;
   left: $border-thickness;
   right: $border-thickness;
   bottom: $border-thickness;
-  background-color: #f6f6f1;
+  background-color: #fefefb;
   border-radius: 20px;
   overflow: hidden;
   
