--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -5,7 +5,7 @@ $border-thickness: 80px;
   height: 100vh;
   width: 100vw;
   overflow: hidden;
-  background-color: #c8c9d6;
+  background-color: white;
 }
 
 .scrollSnapContainer {
