--- a/src/components/Navbar/NavBar.module.scss
+++ b/src/components/Navbar/NavBar.module.scss
@@ -115,7 +115,7 @@
   font-family: "Gaegu", sans-serif;
   font-size: 18px;
   font-weight: 100;
-  color: rgb(255, 255, 255);
+  color: white;
   cursor: pointer;
   text-align: center;
   height: 30px;
