--- a/src/pages/Contact/Contact.module.scss
+++ b/src/pages/Contact/Contact.module.scss
@@ -56,12 +56,12 @@ $secondary-color: #a5abca;
 
   button {
     @extend .gfs-neohellenic-regular;
-    background: #b2bbe0;
+    background: #a2a9c1;
     color: white;
     border: none;
-    padding: 8px;
-    border-radius: 10px;
-    width: 150px;
+    padding: 9px 0;
+    border-radius: 2px 13px;
+    width: 125px;
     cursor: pointer;
     transition: background 0.2s ease;
 
