--- a/src/pages/Skills/Skills.module.scss
+++ b/src/pages/Skills/Skills.module.scss
@@ -42,32 +42,16 @@
     position: relative;
     width: 80px;
     height: 80px;
-    display: flex;
+    display: grid;
     justify-content: center;
     align-items: flex-end;
-}
-
-.lilypad1 {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: auto;
-    z-index: 0;
-}
-
-.lilypad2 {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: auto;
-    z-index: 0;
 }
 
 .icon {
     position: relative;
     font-size: 40px;
     z-index: 1;
-    margin-bottom: 65px;
+    margin-bottom: 10px;
 }
 
 .gaegu {
